@@ -2,9 +2,9 @@ package com.github.novicezk.midjourney.controller;
 
 import cn.hutool.core.comparator.CompareUtil;
 import com.github.novicezk.midjourney.dto.TaskConditionDTO;
+import com.github.novicezk.midjourney.loadbalancer.DiscordLoadBalancer;
 import com.github.novicezk.midjourney.service.TaskStoreService;
 import com.github.novicezk.midjourney.support.Task;
-import com.github.novicezk.midjourney.support.TaskQueueHelper;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
@@ -29,15 +29,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class TaskController {
 	private final TaskStoreService taskStoreService;
-	private final TaskQueueHelper taskQueueHelper;
-
-	@ApiOperation(value = "查询所有任务")
-	@GetMapping("/list")
-	public List<Task> list() {
-		return this.taskStoreService.list().stream()
-				.sorted((t1, t2) -> CompareUtil.compare(t2.getSubmitTime(), t1.getSubmitTime()))
-				.collect(Collectors.toList());
-	}
+	private final DiscordLoadBalancer discordLoadBalancer;
 
 	@ApiOperation(value = "指定ID获取任务")
 	@GetMapping("/{id}/fetch")
@@ -48,19 +40,27 @@ public class TaskController {
 	@ApiOperation(value = "查询任务队列")
 	@GetMapping("/queue")
 	public List<Task> queue() {
-		Set<String> queueTaskIds = this.taskQueueHelper.getQueueTaskIds();
-		return queueTaskIds.stream().map(this.taskStoreService::get).filter(Objects::nonNull)
+		return this.discordLoadBalancer.getQueueTaskIds().stream()
+				.map(this.taskStoreService::get).filter(Objects::nonNull)
 				.sorted(Comparator.comparing(Task::getSubmitTime))
 				.collect(Collectors.toList());
 	}
 
-	@ApiOperation(value = "根据条件查询任务")
+	@ApiOperation(value = "查询所有任务")
+	@GetMapping("/list")
+	public List<Task> list() {
+		return this.taskStoreService.list().stream()
+				.sorted((t1, t2) -> CompareUtil.compare(t2.getSubmitTime(), t1.getSubmitTime()))
+				.toList();
+	}
+
+	@ApiOperation(value = "根据ID列表查询任务")
 	@PostMapping("/list-by-condition")
-	public List<Task> listByCondition(@RequestBody TaskConditionDTO conditionDTO) {
+	public List<Task> listByIds(@RequestBody TaskConditionDTO conditionDTO) {
 		if (conditionDTO.getIds() == null) {
 			return Collections.emptyList();
 		}
-		return conditionDTO.getIds().stream().map(this.taskStoreService::get).filter(Objects::nonNull).collect(Collectors.toList());
+		return conditionDTO.getIds().stream().map(this.taskStoreService::get).filter(Objects::nonNull).toList();
 	}
 
 }
